--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
             android:orientation="vertical">
 
             <EditText
-                android:id="@+id/tt"
+                android:id="@+id/ETtt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:clickable="true"
@@ -32,7 +32,7 @@
                 />
 
             <EditText
-                android:id="@+id/ut"
+                android:id="@+id/ETut"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minLines="4"
@@ -41,7 +41,7 @@
                 />
 
             <EditText
-                android:id="@+id/nom"
+                android:id="@+id/ETnom"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -49,7 +49,7 @@
                 />
 
             <EditText
-                android:id="@+id/jt"
+                android:id="@+id/ETjt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -68,7 +68,7 @@
         android:layout_marginRight="10dp">
 
         <Button
-            android:id="@+id/tambah"
+            android:id="@+id/Btntambah"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -76,7 +76,7 @@
             />
 
         <Button
-            android:id="@+id/report"
+            android:id="@+id/Btnreport"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -85,14 +85,10 @@
 
     </LinearLayout>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
         <ListView
+            android:id="@+id/LVdata"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-    </ScrollView>
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/list_data"/>
 
 </LinearLayout>
